--- a/public/loading/master.css
+++ b/public/loading/master.css
@@ -5,4 +5,4 @@
   width: 100%;
   height: 100%;
   overflow: visible;
-  background: #121f26 url('loadingf.gif') no-repeat center center; }
+  background: #D9D9D9 url('source.gif') no-repeat center center; }
